# django-staticinline

./: .env  .gitignore  .python-version  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  runtests.py  setup.cfg  tox.ini
.github/workflows/: docs.yml  test.yml
docs/: conf.py  development.rst  encoder.rst  index.rst  installation.rst
staticinline/: __init__.py  apps.py  main.py
staticinline/templatetags/: staticinline.py
staticinline/tests/: __init__.py  test_read_data.py  test_templatetag.py
staticinline/tests/testapp/: apps.py  settings.py
staticinline/tests/testapp/static/testapp/: myfile.js  mykey.pem
