[metadata]
name = django-staticinline
version = 1.0

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=1.8


[options.extras_require]
tests =
    tox
    coverage

[coverage:run]
source = staticinline
branch = True
omit =
    staticinline/tests/*

[coverage:report]
show_missing = true
skip_covered = true
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_html_report
