[metadata]
name = django-staticinline
version = 1.1a0
description = Django template tag to load static files inline with your template.
long_description = file: README.rst, CHANGELOG.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-staticinline
keywords = django, staticfiles, inline, performance
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=1.8

[options.extras_require]
dev =
    tox
    pytest-django
    mock; python_version<"3"
test =
    pytest-cov
    pytest-django
    mock; python_version<"3"

[coverage:run]
source = staticinline
branch = True

[coverage:report]
show_missing = true
skip_covered = true
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_html_report
